First alpha version of application

--- a/.htaccess
+++ b/.htaccess
@@ -5,8 +5,13 @@ RewriteEngine on
 # should be access from PHP through $_SERVER
 RewriteRule .* - [E=SUBDIR:]
 
-# redirect all requests to index.php into variable $q
-# except existing files or directories
+# # redirect all requests to index.php into variable $q
+# # except existing files or directories
+# RewriteCond %{REQUEST_FILENAME} !-f
+# RewriteCond %{REQUEST_FILENAME} !-d
+# RewriteRule ^(.+)$ %{ENV:SUBDIR}/?q=$1 [QSA,L]
+
+# redirect all request to index.php without GET parameter
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.+)$ %{ENV:SUBDIR}/?q=$1 [QSA,L]
+RewriteRule ^.*$ %{ENV:SUBDIR}/index.php [L,QSA]
