--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,12 @@
     "require": {
         "psr/http-message": "^1.0@dev",
         "psr/http-factory": "^1.0@dev",
-        "robmorgan/phinx": "dev-master"
+        "robmorgan/phinx": "dev-master",
+        "psr/http-server-middleware": "^1.0@dev",
+        "relay/relay": "~2.0",
+        "psr/http-server-handler": "^1.0@dev",
+        "guzzlehttp/psr7": "^2.0@dev",
+        "morgo/dumpf": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^7",
