--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,6 @@
     "require": {
         "psr/http-message": "^1.0@dev",
         "psr/http-factory": "^1.0@dev",
-        "robmorgan/phinx": "dev-master",
         "psr/http-server-middleware": "^1.0@dev",
         "relay/relay": "~2.0",
         "psr/http-server-handler": "^1.0@dev",
@@ -25,9 +24,10 @@
         "middlewares/request-handler": "dev-master"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7",
-        "squizlabs/php_codesniffer": "^3.4",
-        "phpstan/phpstan": "^0.11.5"
+        "phpunit/phpunit": "9.6.x-dev",
+        "squizlabs/php_codesniffer": "4.0.x-dev",
+        "phpstan/phpstan": "1.10.x-dev",
+        "robmorgan/phinx": "0.x-dev"
     },
     "authors": [
         {
